--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,18 +1,18 @@
 .NavBar {
-    border-bottom: 1px solid #d9d9d9;
-    box-shadow: 0 0 5px 0 #d9d9d9;
-    
+  border-bottom: 1px solid #d9d9d9;
+  box-shadow: 0 0 5px 0 #d9d9d9;
+  background-color: #ffffff;
 }
 
 .NavLink {
-    padding: 5px;
-    color: blue;
+  padding: 5px;
 }
 
-.active i {
-    color: #2F4858 !important;
+.Active i {
+  color: #f1a99d!important;
+  border-bottom: 2px solid #f1a99d;
 }
 
 .Logo {
-    height: 4rem;
+  height: 4rem;
 }
