feat: add search functionality to friendventure page

--- a/src/styles/FriendventuresPage.module.css
+++ b/src/styles/FriendventuresPage.module.css
@@ -1,8 +1,9 @@
+
 .SearchBar input {
     border-radius: 20px;
-    color: #242a3d;
+    color: #406277;
     padding-left: 40px;
-    margin-bottom: 16px;
+    margin-bottom: 15px;
   }
   
   .SearchIcon {
