feat: add message component if user succefully signed out

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -22,6 +22,12 @@
   color: #FF3131;
 }
 
+.AlertGreen {
+  background-color: #e0f2eb;
+  border-color: #008281;
+  color: #008281;
+}
+
 .Main {
   padding-top: 100px;
 }
