--- a/src/styles/ProfilePage.module.css
+++ b/src/styles/ProfilePage.module.css
@@ -10,6 +10,14 @@
   font-size: 1.5rem;
 }
 
+.EditProfile > div {
+  border-radius: 100px;
+  border: 1px solid #008281;
+  padding: 2px 2px;
+  margin-left: 5px;
+  margin-right: 2px;
+}
+
 @media screen and (max-width: 991px) {
   .ProfileImage {
     width: 250px;
