fix: update position of editprofiledropdown

--- a/src/styles/EditDeletDropdown.module.css
+++ b/src/styles/EditDeletDropdown.module.css
@@ -1,14 +1,15 @@
 .DropdownIcon {
-  margin-left: 10px; 
+  margin-left: 10px;
 }
 
 .DropdownItem {
-    display: inline-block;
-    padding: 0px;
-  }
-  
-  .Absolute {
-    position: absolute;
-    right: 0;
-    z-index: 99;
-  }
+  display: inline-block;
+  padding: 0px;
+}
+
+.Absolute {
+  position: absolute;
+  right: auto;
+  margin:3px;
+  z-index: 99;
+}
