feat: final formating on all pages

--- a/src/styles/CommentCreateEditForm.module.css
+++ b/src/styles/CommentCreateEditForm.module.css
@@ -19,7 +19,7 @@
 }
 
 .CommentAreaWrapper {
-  border-bottom: 1px solid #EAD5DC;
+  border-bottom: 1px solid #ead5dc;
   padding-bottom: 10px;
   margin-bottom: 15px;
 }
