--- a/src/styles/AuthForms.module.css
+++ b/src/styles/AuthForms.module.css
@@ -1,4 +1,3 @@
-
 .Input {
   background: #ffffff;
   border: 1px solid #f0f1f9;
@@ -29,7 +28,7 @@
 }
 
 .Link span {
-  color: #FF3131;
+  color: #ff3131;
 }
 
 .Container {
